<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">BookStoreP2</string>


<string name="inventory">Inventory</string>
<string name="edit">Book edit</string>


<string name="buy_btn">order</string>
<string name="increment_button">+</string>
<string name="decrement_button">-</string>
<string name="save_button">Save</string>

<string name="call_button">Call to order</string>
<string name="edit_button">Edit this book</string>
<string name="delete_book">Delete book</string>
<string name="delete_all_books">Delete all books</string>
<string name="add_dummy_book">Add a Dummy book</string>

<!--TextViews-->
<string name="overview">Overview</string>
<string name="book_name">Book name</string>
<string name="currency">$ </string>
<string name="price">Price: $</string>
<string name="quantity">Quantity: </string>
<string name="supplier_info">Supplier info</string>
<string name="supplier_name">Name</string>
<string name="supplier_phone">Contact</string>

<string name="zero">0</string>
<string name="empty_text">The shelf is empty, please consider adding books by clicking the floating button</string>
<string name="info_edit">Check the top right menu for more options.</string>
<string name="out_stock">Out of stock</string>

<!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
<string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

<!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
<string name="discard">Discard</string>

<string name="keep_editing">Keep Editing</string>

<string name="delete_dialog_msg">Do you want to delete this book from the database?</string>

<string name="delete">Delete</string>

<string name="cancel">Cancel</string>

<!--Content description for the empty screen image-->
<string name="desc_book2">Image when shelf is empty</string>

<!--Content description for the edit activity image-->
<string name="DescbBook1">Image in editor activity</string>
</resources>