<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <!--tools:context=".EditorActivity">-->

    <!-- Product Overview -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/overview" />

        <!-- Name and price -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="4dp"
            android:paddingStart="4dp">

            <!-- Name -->
            <EditText
                android:id="@+id/edit_book_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/book_name"
                android:inputType="textCapWords" />

            <!-- Price -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_price"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!-- Quantity -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- label -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/quantity" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increment_button" />

            <EditText
                android:inputType="number"
                android:id="@+id/text_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text=""
                android:textAlignment="center" />

            <Button
                android:id="@+id/decrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrement_button" />

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier info -->
    <LinearLayout
        android:id="@+id/container_supplier_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/supplier_info" />

        <!-- Info -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- name -->
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/edit_supplier_name"
                android:hint="@string/supplier_name"
                android:inputType="text" />
            <!-- phone -->
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/supplier_phone"
                android:inputType="phone" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/save_btn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#323299"
        android:text="@string/save_button"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/call_btn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#323299"
        android:text="@string/call_button"
        android:textAlignment="center" />


</LinearLayout>